--- a/app/src/main/res/values-ko/values-ko.xml
+++ b/app/src/main/res/values-ko/values-ko.xml
@@ -43,13 +43,19 @@
     <string name="store_title">가게 이름</string>
     <string name="store_link">가게 링크</string>
 
-    <string name="toast_add">Add complete</string>
-    <string name="toast_adjust">Edit complete</string>
-    <string name="toast_delete">Delete complete</string>
-    <string name="toast_choose">Choose</string>
-    <string name="toast_complete">complete</string>
+    <string name="toast_add">추가되었습니다</string>
+    <string name="toast_adjust">수정되었습니다</string>
+    <string name="toast_delete">삭제되었습니다</string>
+    <string name="toast_choose">선택되었습니다</string>
+    <string name="toast_complete">완료되었습니다</string>
+    <string name="toast_overlab">같은 이름이 존재합니다.</string>
+    <string name="toast_cancel">취소되었습니다</string>
+    <string name="toast_confirm">적용되었습니다</string>
+    <string name="toast_check_list">목록을 추가해주세요</string>
+    <string name="toast_check_link">URL이 올바른지 확인해주세요.</string>
+    <string name="toast_developing">준비 중입니다</string>
 
-    <string name="search">   검색</string>
+    <string name="search">검색</string>
 
     <string name="late">최신순</string>
     <string name="old">오래된순</string>
