--- a/app/src/main/res/layout/fragment_fragment2.xml
+++ b/app/src/main/res/layout/fragment_fragment2.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    android:id="@+id/frame_fragment2"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -108,6 +110,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
             >
 
             <Button
@@ -115,7 +118,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:text="@string/late"
-                android:background="@drawable/button_custom2"
+                android:background="@drawable/button_custom_only_line"
                 android:layout_margin="5dp"
 
                 />
@@ -125,7 +128,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:text="@string/old"
-                android:background="@drawable/button_custom2"
+                android:background="@drawable/button_custom_only_line"
                 android:layout_margin="5dp"
                 />
 
@@ -134,7 +137,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:text="@string/restore"
-                android:background="@drawable/button_custom2"
+                android:background="@drawable/button_custom_only_line"
                 android:layout_margin="5dp"
                 />
 
