--- a/app/src/main/res/drawable/button_custom1.xml
+++ b/app/src/main/res/drawable/button_custom1.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <solid
-        android:color="@color/color3"
+        android:color="#EFB8E4"
         />
 
     <corners
