--- a/app/src/main/res/layout/activity_add_menu.xml
+++ b/app/src/main/res/layout/activity_add_menu.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/frame_add_menu"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,6 +14,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
 
+        android:layout_margin="10dp"
+
         app:layout_constraintTop_toTopOf="parent"
 
         >
@@ -19,30 +23,36 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             >
 
             <ImageView
                 android:id="@+id/img_add_title"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:src="@drawable/ic_add_circle_black_24dp"
 
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+
+
                 />
 
             <TextView
                 android:id="@+id/tv_add_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginLeft="10dp"
 
 
                 android:text="@string/add_menu"
                 android:textColor="@color/colorBlack"
 
                 app:layout_constraintLeft_toRightOf="@id/img_add_title"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
 
             <Button
                 android:id="@+id/btn_menu_delete"
@@ -52,8 +62,7 @@
 
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-
-                android:layout_margin="5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
 
                 />
 
@@ -160,6 +169,8 @@
         android:orientation="horizontal"
 
         app:layout_constraintBottom_toBottomOf="parent"
+
+
         >
 
         <Button
