--- a/app/src/main/res/layout/adjust_grid_resource_edit.xml
+++ b/app/src/main/res/layout/adjust_grid_resource_edit.xml
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:text="@string/confirm"
-        android:background="@drawable/button_custom2"
+        android:background="@drawable/button_custom_only_line"
         android:layout_marginTop="5dp"
                 />
 
