--- a/app/src/main/res/layout/list_resource.xml
+++ b/app/src/main/res/layout/list_resource.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    android:id="@+id/card_fragment2"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -49,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:text="@string/edit"
-                android:background="@drawable/button_custom2"
+                android:background="@drawable/button_custom_only_line"
                 android:layout_marginLeft="10dp"
                 />
 
