--- a/app/src/main/res/layout/list_resource2.xml
+++ b/app/src/main/res/layout/list_resource2.xml
@@ -12,8 +12,8 @@
 
     <ImageView
         android:id="@+id/img_linear_resource"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         />
 
     <TextView
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
         android:textColor="@color/colorBlack"
+        android:textSize="15dp"
         />
 
 </LinearLayout>
