--- a/app/src/main/res/layout/backpressed_dialog.xml
+++ b/app/src/main/res/layout/backpressed_dialog.xml
@@ -11,6 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="종료하시겠습니까?"
+        android:textSize="20dp"
+
+        android:textColor="@color/colorBlack"
 
         android:layout_margin="10dp"
 
@@ -49,6 +52,7 @@
             android:text="@string/colorpicker_dialog_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             />
 
         <Button
@@ -56,6 +60,7 @@
             android:text="@string/colorpicker_dialog_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             />
 
     </LinearLayout>
