--- a/app/src/main/res/layout/activity_view_pager_intro.xml
+++ b/app/src/main/res/layout/activity_view_pager_intro.xml
@@ -25,12 +25,12 @@
         android:id="@+id/dots_viewpager"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:dotsColor="@color/color9"
+        app:dotsColor="@color/colorNaturalWhite"
         app:dotsCornerRadius="8dp"
         app:dotsSize="16dp"
         app:dotsSpacing="4dp"
         app:dotsWidthFactor="2.5"
-        app:selectedDotColor="@color/color7"
+        app:selectedDotColor="@color/colorNaturalNavy"
         app:progressMode="true"
 
         app:layout_constraintBottom_toBottomOf="parent"
