--- a/app/src/main/res/layout/activity_add_menu.xml
+++ b/app/src/main/res/layout/activity_add_menu.xml
@@ -54,17 +54,19 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 />
 
-            <Button
+            <ImageView
                 android:id="@+id/btn_menu_delete"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:text="@string/delete"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_delete_forever_black_24dp"
 
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
 
                 />
+
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
