--- a/app/src/main/res/layout/viewpager_1.xml
+++ b/app/src/main/res/layout/viewpager_1.xml
@@ -1,30 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/ll_viewpager"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Button
         android:id="@+id/btn_skip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:layout_gravity="right"
         android:layout_margin="5dp"
-        android:text="바로 시작하기"
-        />
+        android:text="Skip"
 
-    <ImageView
-        android:id="@+id/img_viewpager"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_gravity="center"
-
-        android:layout_marginTop="200dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         />
 
     <TextView
@@ -33,13 +24,31 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
 
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp"
-
         android:text="설명"
+
+        app:layout_constraintTop_toBottomOf="@id/btn_skip"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+
+        android:layout_margin="20dp"
+        android:textColor="@color/colorBlack"
+
+        />
+
+    <ImageView
+        android:id="@+id/img_viewpager"
+        android:layout_width="wrap_content"
+        android:layout_height="400dp"
+
+        app:layout_constraintTop_toBottomOf="@id/tv_viewpager"
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
 
         />
 
 
 
-</LinearLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
