--- a/app/src/main/res/layout/activity_view_pager_intro.xml
+++ b/app/src/main/res/layout/activity_view_pager_intro.xml
@@ -21,6 +21,17 @@
 
     </androidx.viewpager2.widget.ViewPager2>
 
+    <Button
+        android:id="@+id/btn_skip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="@string/viewpager_button"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
     <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
         android:id="@+id/dots_viewpager"
         android:layout_width="wrap_content"
@@ -44,24 +55,33 @@
 
     <ImageView
         android:id="@+id/img_viewpager_previous"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+
+        android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
+
 
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
 
-        android:layout_margin="50dp"
+
+        android:layout_marginLeft="20dp"
         />
 
     <ImageView
         android:id="@+id/img_viewpager_next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+
+        android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
 
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
 
-        android:layout_margin="50dp"
+
+        android:layout_marginRight="20dp"
         />
 
 
