--- a/app/src/main/res/layout/license_dialog.xml
+++ b/app/src/main/res/layout/license_dialog.xml
@@ -15,11 +15,10 @@
         android:layout_margin="10dp"
         />
 
-    <TextView
-        android:id="@+id/tv_license"
-        android:layout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_license"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         />
 
     <Button
