--- a/app/src/main/res/layout/progress_dialog.xml
+++ b/app/src/main/res/layout/progress_dialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center"
@@ -10,13 +10,33 @@
     >
 
     <ProgressBar
+        android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@android:style/Widget.ProgressBar.Inverse"
         android:layout_margin="10dp"
-        android:indeterminateTint="@color/colorPrimaryDark"
-
+        android:indeterminateTint="@color/colorBlack"
         />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+
+        <TextView
+            android:id="@+id/tv_loading_percent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="%"
+            />
+
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/tv_loading"
