--- a/app/src/main/res/values-ko/values-ko.xml
+++ b/app/src/main/res/values-ko/values-ko.xml
@@ -72,6 +72,7 @@
     <string name="viewpager_6">이래도 뭘 먹을지 모르겠다면..! \n 랜덤으로 정해보세요! \n (광고 팝업 후 결과가 표기됩니다)</string>
     <string name="viewpager_7">다양하게 준비해둔 디자인 메뉴를 활용하여 \n 앱을 자유롭게 꾸며볼 수도 있답니다~</string>
     <string name="viewpager_8">자자, 이제 준비는 끝났으니 \n 바로 시작해볼까요?</string>
+    <string name="viewpager_button">시작!</string>
 
     <string name="search">검색</string>
 
