--- a/app/src/main/res/drawable/splash_layout.xml
+++ b/app/src/main/res/drawable/splash_layout.xml
@@ -4,10 +4,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:drawable="@color/colorWhite"/>
+        android:drawable="@color/redSplashBackground"/>
 
     <item>
-        <bitmap android:src="@drawable/drawable_image_10"
+        <bitmap android:src="@drawable/todaylunch_splash_128"
             android:gravity="center"
             />
 
