--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="colorNaturalGrey">#EBECED</color>
     <color name="colorNaturalNavy">#4C586F</color>
     <color name="colorNaturalWhite">#CBC5C1</color>
+    <color name="redSplashBackground">#e81c1c</color>
 
 </resources>
