--- a/app/src/main/res/values-ja/values-ja.xml
+++ b/app/src/main/res/values-ja/values-ja.xml
@@ -21,6 +21,8 @@
     <string name="review">レビュー</string>
     <string name="privacy">個人情報保護約款</string>
     <string name="licence">licence / copyright</string>
+    <string name="email">Send E-mail to developer</string>
+    <string name="kakao">Talk with KAKAO TALK</string>
 
     <string name="button">Button style</string>
     <string name="background">Background color</string>
