--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -13,6 +13,7 @@
         android:text="@string/icon_dialog"
         android:textStyle="bold"
         android:textSize="20dp"
+        android:textColor="@color/colorBlack"
         android:layout_margin="20dp"
 
         android:gravity="center"
@@ -23,7 +24,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_dialog"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="9"
 
         >
