--- a/app/src/main/res/layout/license_dialog.xml
+++ b/app/src/main/res/layout/license_dialog.xml
@@ -1,32 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+
+    android:layout_margin="10dp"
+    android:orientation="vertical"
+    android:gravity="center_horizontal"
+
+    >
 
     <TextView
         android:id="@+id/tv_license_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="저작권 표기"
+        android:text="@string/licence"
+        android:textSize="15dp"
+
+        android:layout_margin="5dp"
         android:textColor="@color/colorBlack"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="10dp"
+
+
+
         />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_license"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="8"
+
+        android:layout_margin="5dp"
+
+
         />
 
     <Button
         android:id="@+id/btn_license_dialog"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/colorpicker_dialog_ok"
-        android:layout_margin="5dp"
+        android:layout_weight="1"
         />
 
 </LinearLayout>
