--- a/app/src/main/res/layout/adjust_grid_resource_edit.xml
+++ b/app/src/main/res/layout/adjust_grid_resource_edit.xml
@@ -5,8 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
+    android:layout_margin="20dp"
     >
 
     <androidx.cardview.widget.CardView
@@ -20,8 +19,8 @@
         <ImageView
             android:src="@mipmap/ic_launcher_round"
             android:id="@+id/img_adjust_grid"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
             />
