--- a/app/src/main/res/values-en/values-en.xml
+++ b/app/src/main/res/values-en/values-en.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Today lunch</string>
+    <string name="app_name">Today Lunch</string>
 
     <string name="tabLayout_icon">Grid</string>
     <string name="tabLayout_list">List</string>
@@ -51,30 +51,32 @@
     <string name="store_title">Restaurant name</string>
     <string name="store_link">Restaurant URL</string>
 
-    <string name="toast_add">Add complete</string>
-    <string name="toast_adjust">Edit complete</string>
-    <string name="toast_delete">Delete complete</string>
-    <string name="toast_choose">Choose</string>
-    <string name="toast_complete">complete</string>
-    <string name="toast_overlab">Already exist same title</string>
-    <string name="toast_cancel">Cancel</string>
-    <string name="toast_confirm">Confirm</string>
+    <string name="toast_add">Added it!</string>
+    <string name="toast_adjust">Changed it!</string>
+    <string name="toast_delete">Deleted it!</string>
+    <string name="toast_choose">Date update complete</string>
+    <string name="toast_complete">Done!</string>
+    <string name="toast_overlab">Already have the same name</string>
+    <string name="toast_cancel">Canceled it</string>
+    <string name="toast_confirm">Checked</string>
     <string name="toast_check_list">Please add store list</string>
     <string name="toast_check_link">Please check URL</string>
     <string name="toast_developing">Please wait for ready</string>
     <string name="toast_retry">Please make the right choice</string>
 
-    <string name="dialog_delete">Delete this menu?</string>
+    <string name="dialog_delete">You want to delete it?</string>
 
-    <string name="viewpager_0">오점무에 오신 것을 환영합니다~ \n 이제 점심메뉴는 쉽게 고르도록 도와줄게요!</string>
-    <string name="viewpager_1">알고 있었거나 새로 알게 된 음식점을 \n 목록에 추가하세요!</string>
-    <string name="viewpager_2">메인메뉴에서 대분류를 먼저 골라보세요! \n (수정도 가능해요)</string>
-    <string name="viewpager_3">이제 상세메뉴에서 어떤 메뉴를 고를지 정해보세요!</string>
-    <string name="viewpager_4">해당 경로에 해당하는 메뉴들이 \n 목록으로 표기됩니다!</string>
-    <string name="viewpager_5">"리스트" 탭에서 전체메뉴를 \n 최신순 / 오래된순으로 정렬하거나 검색도 가능!</string>
-    <string name="viewpager_6">이래도 뭘 먹을지 모르겠다면..! \n 랜덤으로 정해보세요! \n (광고 팝업 후 결과가 표기됩니다)</string>
-    <string name="viewpager_7">다양하게 준비해둔 디자인 메뉴를 활용하여 \n 앱을 자유롭게 꾸며볼 수도 있답니다~</string>
-    <string name="viewpager_8">자자, 이제 준비는 끝났으니 \n 바로 시작해볼까요?</string>
+    <string name="end">Are you want to exit App?</string>
+
+    <string name="viewpager_0">Welcome to Today Lunch! \n We will help you choose your lunch!</string>
+    <string name="viewpager_1">First, Add a new restaurant to the list.</string>
+    <string name="viewpager_2">Method 1 ) \n Choose from the large group first \n (Modifiable)</string>
+    <string name="viewpager_3">And choose again from subdivision menu!</string>
+    <string name="viewpager_4">The restaurants that match the selected menu \n will be listed (The ones you saved).</string>
+    <string name="viewpager_5">Method 2 ) \n You can also sort or search \n in the latest or oldest order here.</string>
+    <string name="viewpager_6">Method 3 ) \n Have not you decided yet? \n Then try the random function. \n (Display result after ad)</string>
+    <string name="viewpager_7">You can also decorate apps \n using the design menu.</string>
+    <string name="viewpager_8">Since we are all ready, \n shall we start right away?</string>
     <string name="viewpager_button">START</string>
 
     <string name="search">Search</string>
@@ -83,104 +85,104 @@
     <string name="old">Old</string>
     <string name="restore">Restore</string>
 
-    <string name="main_menu1">-</string>
-    <string name="main_menu2">-</string>
-    <string name="main_menu3">-</string>
-    <string name="main_menu4">-</string>
-    <string name="main_menu5">-</string>
-    <string name="main_menu6">-</string>
-    <string name="main_menu7">-</string>
-    <string name="main_menu8">-</string>
-    <string name="main_menu9">-</string>
+    <string name="main_menu1">Korean</string>
+    <string name="main_menu2">Stews</string>
+    <string name="main_menu3">Chinese</string>
+    <string name="main_menu4">Japanese</string>
+    <string name="main_menu5">Noodles</string>
+    <string name="main_menu6">American</string>
+    <string name="main_menu7">Hangover</string>
+    <string name="main_menu8">Simple</string>
+    <string name="main_menu9">etc</string>
 
-    <string name="sub_menu1_1">-</string>
-    <string name="sub_menu1_2">-</string>
-    <string name="sub_menu1_3">-</string>
-    <string name="sub_menu1_4">-</string>
-    <string name="sub_menu1_5">-</string>
-    <string name="sub_menu1_6">-</string>
-    <string name="sub_menu1_7">-</string>
-    <string name="sub_menu1_8">-</string>
-    <string name="sub_menu1_9">-</string>
+    <string name="sub_menu1_1">Bulgogi</string>
+    <string name="sub_menu1_2">Spicy Tofu</string>
+    <string name="sub_menu1_3">Stirred chick</string>
+    <string name="sub_menu1_4">Ssambap</string>
+    <string name="sub_menu1_5">Bibimbap</string>
+    <string name="sub_menu1_6">Roasted fish</string>
+    <string name="sub_menu1_7">Stir-fry \n octopus</string>
+    <string name="sub_menu1_8">Marinated \n crab</string>
+    <string name="sub_menu1_9">Grilled \n patties</string>
 
-    <string name="sub_menu2_1">-</string>
-    <string name="sub_menu2_2">-</string>
-    <string name="sub_menu2_3">-</string>
-    <string name="sub_menu2_4">-</string>
-    <string name="sub_menu2_5">-</string>
-    <string name="sub_menu2_6">-</string>
-    <string name="sub_menu2_7">-</string>
-    <string name="sub_menu2_8">-</string>
-    <string name="sub_menu2_9">-</string>
+    <string name="sub_menu2_1">Kimchi \n Stew</string>
+    <string name="sub_menu2_2">Bean curd \n Stew</string>
+    <string name="sub_menu2_3">Soybean paste \n stew</string>
+    <string name="sub_menu2_4">Spicy Sausage \n Stew</string>
+    <string name="sub_menu2_5">Frozen pollack \n stew</string>
+    <string name="sub_menu2_6">Cheonggukjang \n </string>
+    <string name="sub_menu2_7">Short rib \n soup</string>
+    <string name="sub_menu2_8">Chueotang \n </string>
+    <string name="sub_menu2_9">Samgyetang \n </string>
 
-    <string name="sub_menu3_1">-</string>
-    <string name="sub_menu3_2">-</string>
-    <string name="sub_menu3_3">-</string>
-    <string name="sub_menu3_4">-</string>
-    <string name="sub_menu3_5">-</string>
-    <string name="sub_menu3_6">-</string>
-    <string name="sub_menu3_7">-</string>
-    <string name="sub_menu3_8">-</string>
-    <string name="sub_menu3_9">-</string>
+    <string name="sub_menu3_1">Black bean \n noodle</string>
+    <string name="sub_menu3_2">Mara \n stew</string>
+    <string name="sub_menu3_3">Fried \n rice</string>
+    <string name="sub_menu3_4">Sweet sour \n pork</string>
+    <string name="sub_menu3_5">Mapa \n Tofu</string>
+    <string name="sub_menu3_6">Spicy \n stir-fried</string>
+    <string name="sub_menu3_7">Deep-fried \n Chicken</string>
+    <string name="sub_menu3_8">Yuringi \n</string>
+    <string name="sub_menu3_9">Dumpling \n</string>
 
-    <string name="sub_menu4_1">-</string>
-    <string name="sub_menu4_2">-</string>
-    <string name="sub_menu4_3">-</string>
-    <string name="sub_menu4_4">-</string>
-    <string name="sub_menu4_5">-</string>
-    <string name="sub_menu4_6">-</string>
-    <string name="sub_menu4_7">-</string>
-    <string name="sub_menu4_8">-</string>
-    <string name="sub_menu4_9">-</string>
+    <string name="sub_menu4_1">Sushi</string>
+    <string name="sub_menu4_2">Ramen</string>
+    <string name="sub_menu4_3">Miso</string>
+    <string name="sub_menu4_4">Onigiri</string>
+    <string name="sub_menu4_5">Kaisen-dong</string>
+    <string name="sub_menu4_6">Udon</string>
+    <string name="sub_menu4_7">Yakiniku</string>
+    <string name="sub_menu4_8">Soba</string>
+    <string name="sub_menu4_9">Donkatsu</string>
 
-    <string name="sub_menu5_1">-</string>
-    <string name="sub_menu5_2">-</string>
-    <string name="sub_menu5_3">-</string>
-    <string name="sub_menu5_4">-</string>
-    <string name="sub_menu5_5">-</string>
-    <string name="sub_menu5_6">-</string>
-    <string name="sub_menu5_7">-</string>
-    <string name="sub_menu5_8">-</string>
-    <string name="sub_menu5_9">-</string>
+    <string name="sub_menu5_1">Jjolmyeon</string>
+    <string name="sub_menu5_2">Pad Thai</string>
+    <string name="sub_menu5_3">Cold noodles</string>
+    <string name="sub_menu5_4">Banquet noodles</string>
+    <string name="sub_menu5_5">Spicy noodles</string>
+    <string name="sub_menu5_6">Kalguksu</string>
+    <string name="sub_menu5_7">Bean noodles</string>
+    <string name="sub_menu5_8">Rice noodles</string>
+    <string name="sub_menu5_9">Jjambbong</string>
 
-    <string name="sub_menu_6_1">-</string>
-    <string name="sub_menu_6_2">-</string>
-    <string name="sub_menu_6_3">-</string>
-    <string name="sub_menu_6_4">-</string>
-    <string name="sub_menu_6_5">-</string>
-    <string name="sub_menu_6_6">-</string>
-    <string name="sub_menu_6_7">-</string>
-    <string name="sub_menu_6_8">-</string>
-    <string name="sub_menu_6_9">-</string>
+    <string name="sub_menu_6_1">Spaghetti</string>
+    <string name="sub_menu_6_2">Pasta</string>
+    <string name="sub_menu_6_3">Pizza</string>
+    <string name="sub_menu_6_4">Hamburg steak</string>
+    <string name="sub_menu_6_5">Risotto</string>
+    <string name="sub_menu_6_6">Steak</string>
+    <string name="sub_menu_6_7">Hamburger</string>
+    <string name="sub_menu_6_8">Salad</string>
+    <string name="sub_menu_6_9">Omelet</string>
 
-    <string name="sub_menu_7_1">-</string>
-    <string name="sub_menu_7_2">-</string>
-    <string name="sub_menu_7_3">-</string>
-    <string name="sub_menu_7_4">-</string>
-    <string name="sub_menu_7_5">-</string>
-    <string name="sub_menu_7_6">-</string>
-    <string name="sub_menu_7_7">-</string>
-    <string name="sub_menu_7_8">-</string>
-    <string name="sub_menu_7_9">-</string>
+    <string name="sub_menu_7_1">Dried pollak \n soup</string>
+    <string name="sub_menu_7_2">Bean sprout \n soup</string>
+    <string name="sub_menu_7_3">Pork Rice \n soup</string>
+    <string name="sub_menu_7_4">Sundae \n soup</string>
+    <string name="sub_menu_7_5">Bone hangover \n soup</string>
+    <string name="sub_menu_7_6">Vegetable \n soup</string>
+    <string name="sub_menu_7_7">Cow blood \n soup</string>
+    <string name="sub_menu_7_8">Seafood \n stew</string>
+    <string name="sub_menu_7_9">Korean \n Ramen</string>
 
-    <string name="sub_menu_8_1">-</string>
-    <string name="sub_menu_8_2">-</string>
-    <string name="sub_menu_8_3">-</string>
-    <string name="sub_menu_8_4">-</string>
-    <string name="sub_menu_8_5">-</string>
-    <string name="sub_menu_8_6">-</string>
-    <string name="sub_menu_8_7">-</string>
-    <string name="sub_menu_8_8">-</string>
-    <string name="sub_menu_8_9">-</string>
+    <string name="sub_menu_8_1">Lunchbox</string>
+    <string name="sub_menu_8_2">Sandwich</string>
+    <string name="sub_menu_8_3">Toast</string>
+    <string name="sub_menu_8_4">Frozen</string>
+    <string name="sub_menu_8_5">Rice roll</string>
+    <string name="sub_menu_8_6">Ddeokbboki</string>
+    <string name="sub_menu_8_7">Hot dog</string>
+    <string name="sub_menu_8_8">Riceburger</string>
+    <string name="sub_menu_8_9">Cereal</string>
 
-    <string name="sub_menu_9_1">-</string>
-    <string name="sub_menu_9_2">-</string>
-    <string name="sub_menu_9_3">-</string>
-    <string name="sub_menu_9_4">-</string>
-    <string name="sub_menu_9_5">-</string>
-    <string name="sub_menu_9_6">-</string>
-    <string name="sub_menu_9_7">-</string>
-    <string name="sub_menu_9_8">-</string>
-    <string name="sub_menu_9_9">-</string>
+    <string name="sub_menu_9_1">Rice topped</string>
+    <string name="sub_menu_9_2">Bread</string>
+    <string name="sub_menu_9_3">Curry</string>
+    <string name="sub_menu_9_4">Steamed \n Chicken</string>
+    <string name="sub_menu_9_5">Sujebi \n</string>
+    <string name="sub_menu_9_6">Fried \n Chicken</string>
+    <string name="sub_menu_9_7">Chicken \n rip</string>
+    <string name="sub_menu_9_8">Vietnamese \n Rolls</string>
+    <string name="sub_menu_9_9">Shabu-Shabu \n </string>
 
 </resources>
