--- a/app/src/main/res/values-ko/values-ko.xml
+++ b/app/src/main/res/values-ko/values-ko.xml
@@ -66,6 +66,8 @@
 
     <string name="dialog_delete">정말로 삭제하시겠습니까?</string>
 
+    <string name="end">종료하시겠습니까?</string>
+
     <string name="viewpager_0">오점무에 오신 것을 환영합니다~ \n 이제 점심메뉴는 쉽게 고르도록 도와줄게요!</string>
     <string name="viewpager_1">알고 있었거나 새로 알게 된 음식점을 \n 목록에 추가하세요!</string>
     <string name="viewpager_2">메인메뉴에서 대분류를 먼저 골라보세요! \n (수정도 가능해요)</string>
